packagelon com.twittelonr.reloncos.uselonr_uselonr_graph

import com.twittelonr.logging.Loggelonr
import com.twittelonr.reloncos.uselonr_uselonr_graph.thriftscala._
import com.twittelonr.util.Futurelon

trait LoggingUselonrUselonrGraph elonxtelonnds thriftscala.UselonrUselonrGraph.MelonthodPelonrelonndpoint {
  privatelon[this] val accelonssLog = Loggelonr("accelonss")

  abstract ovelonrridelon delonf reloncommelonndUselonrs(
    relonquelonst: ReloncommelonndUselonrRelonquelonst
  ): Futurelon[ReloncommelonndUselonrRelonsponselon] = {
    val timelon = Systelonm.currelonntTimelonMillis
    supelonr.reloncommelonndUselonrs(relonquelonst) onSuccelonss { relonsp =>
      val timelonTakelonn = Systelonm.currelonntTimelonMillis - timelon
      val logTelonxt =
        s"In ${timelonTakelonn}ms, reloncommelonndUselonrs(${relonquelonstToString(relonquelonst)}), relonsponselon ${relonsponselonToString(relonsp)}"
      accelonssLog.info(logTelonxt)
    } onFailurelon { elonxc =>
      val timelonTakelonn = Systelonm.currelonntTimelonMillis - timelon
      val logTelonxt = s"In ${timelonTakelonn}ms, reloncommelonndUselonrs(${relonquelonstToString(relonquelonst)} relonturnelond elonrror"
      accelonssLog.elonrror(elonxc, logTelonxt)
    }
  }

  privatelon delonf relonquelonstToString(relonquelonst: ReloncommelonndUselonrRelonquelonst): String = {
    Selonq(
      relonquelonst.relonquelonstelonrId,
      relonquelonst.displayLocation,
      relonquelonst.selonelondsWithWelonights.sizelon,
      relonquelonst.selonelondsWithWelonights.takelon(5),
      relonquelonst.elonxcludelondUselonrIds.map(_.sizelon).gelontOrelonlselon(0),
      relonquelonst.elonxcludelondUselonrIds.map(_.takelon(5)),
      relonquelonst.maxNumRelonsults,
      relonquelonst.maxNumSocialProofs,
      relonquelonst.minUselonrPelonrSocialProof,
      relonquelonst.socialProofTypelons,
      relonquelonst.maxelondgelonelonngagelonmelonntAgelonInMillis
    ).mkString(",")
  }

  privatelon delonf relonsponselonToString(relonsponselon: ReloncommelonndUselonrRelonsponselon): String = {
    relonsponselon.reloncommelonndelondUselonrs.toList.map { reloncUselonr =>
      val socialProof = reloncUselonr.socialProofs.map {
        caselon (proofTypelon, proofs) =>
          (proofTypelon, proofs)
      }
      (reloncUselonr.uselonrId, reloncUselonr.scorelon, socialProof)
    }.toString
  }
}
